WIP: added show.ejs folder with sub files for each of the four seasons

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -13,10 +13,10 @@
 		<h1>New Bucket List Item Page</h1>
 		<form action="/seasons" method="POST">
             <h3> Select Season</h3>
-            <input type="radio" name="season"/>  Summer:
-             <input type="radio" name="season" /> Fall:
-             <input type="radio" name="season"/> Winter:
-            <input type="radio" name="season"/>  Spring: </br>
+            <input type="radio" name="season" value="Summer"/>Summer:
+             <input type="radio" name="season" value="Fall"/> Fall:
+             <input type="radio" name="season" value="Winter"/> Winter:
+            <input type="radio" name="season" value="Spring"/>  Spring: </br>
 
 			Title: <input type="text" name="title" /><br />
 			Description: <input type="text" name="description" /><br />
