--- a/views/show/summerShow.ejs
+++ b/views/show/summerShow.ejs
@@ -10,6 +10,8 @@
 		<nav>
 			<a href="/seasons">Back to Seasons Index</a>
 		</nav>
+		<%= console.log(season) %>
+        <h2><%=season.season %></h2>
         <h1><%=season.title %></h1>
         Description: <%= season.description%>
 		<br />
@@ -26,6 +28,9 @@
         ._id %>?_method=DELETE" method="POST" style = "display: inline; margin-left: 16px;">
         <input type="submit" value="DELETE" />
         <a href="/seasons/<%=season._id; %>" method="DELETE"> delete item</a>
+
+		<a href="/seasons/new">Add a New Bucket List Item</a>
+
 	
 	</body>
 </html>
