--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,8 @@
 	<body>
         <div class="container">
             <header> <h1>
-                Four Seasons Bucket List
+                
+            <img id = "bucket-list" src='https://i.imgur.com/dFf9lfn.png'/>
             </h1></header>
         <nav id="nav-bar">
             <a href="/seasons/new">Add a New Bucket List Item</a>
@@ -21,7 +22,7 @@
         
         <div id = "content1"> <img id="summer" src="https://images.pexels.com/photos/67566/palm-tree-palm-ocean-summer-67566.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"/>
         <nav>
-            <a href="/seasons/summer">Summer</a>
+            <a href="/seasons/summer"><img src="https://i.imgur.com/Eg82IVz.jpg"/></a>
         </nav>
         </div>
         <div id = "content2"> 
