--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -12,6 +12,7 @@
     <h1>Edit Bucket List Item</h1>
     <form action="/seasons/<%=season._id%>?_method=PUT" method="POST">
         <!--  NOTE: the form is pre-populated with values for the server-->
+        Season: <input type="radio" name="season" value="<%=season.season%>" /><br /> 
         Title: <input type="text" name="title" value="<%=season.title%>" /><br />
         Description: <input type="text" name="description" value="<%=season.description%>" /><br />
         Image: <input type="text" name="img" value="<%=season.img%>" /><br />
