--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
         
         <div id = "content1"> <img id="summer" src="https://images.pexels.com/photos/67566/palm-tree-palm-ocean-summer-67566.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"/>
         <nav>
-            <a href="/seasons/summer"><img src="https://i.imgur.com/Eg82IVz.jpg"/></a>
+            <a href="/seasons/summer"><img src="https://i.imgur.com/a9HtR1m.png"/></a>
         </nav>
         </div>
         <div id = "content2"> 
