--- a/views/show/winterShow.ejs
+++ b/views/show/winterShow.ejs
@@ -13,7 +13,7 @@
 		<ul>
 			<%= console.log(season) %>
 		<% for (let i = 0; i < season.length; i++) { %>
-		<%	if (season[i].season === "winter") { %>
+		<%	if (season[i].season === "Winter") { %>
 			<li>
 			<%=season[i].season %>
 			</li>
@@ -29,16 +29,16 @@
 			<li>
 			Completed: <%= season[i].completed %>
 			</li>
+			<li>
+				<a href="/seasons/<%= season._id%>"> <%=season.title %> </a>
+				<form action="/seasons/<%= season.id%>?_method=DELETE" method="POST">
+					<input type="submit" value="DELETE"/></form> 
+					<a href="/seasons/<%=season._id %>/edit"> Edit Bucket List Item </a>
+				</li>
 			<% } %>	
 		<% } %> 
 		</ul>
-        <a href="/seasons/<%=season._id %>/edit">Edit Bucket List Item</a> 		<br />
-
-
-        <form action="/seasons/<%= season
-        ._id %>?_method=DELETE" method="POST" style = "display: inline; margin-left: 16px;">
-        <input type="submit" value="DELETE" />
-        <a href="/seasons/<%=season._id; %>" method="DELETE"> delete item</a>
+       
 
 		<a href="/seasons/new">Add a New Bucket List Item</a>
 
