--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -12,7 +12,11 @@
     <h1>Edit Bucket List Item</h1>
     <form action="/seasons/<%=season._id%>?_method=PUT" method="POST">
         <!--  NOTE: the form is pre-populated with values for the server-->
-        Season: <input type="radio" name="season" value="<%=season.season%>" /><br /> 
+        <h4> Season:</h4> 
+        Summer: <input type="radio" name="season" value="<%=season.season%>" />
+        Fall: <input type="radio" name="season" value="<%=season.season%>" />
+        Winter: <input type="radio" name="season" value="<%=season.season%>" />
+        Spring: <input type="radio" name="season" value="<%=season.season%>" /> <br />
         Title: <input type="text" name="title" value="<%=season.title%>" /><br />
         Description: <input type="text" name="description" value="<%=season.description%>" /><br />
         Image: <input type="text" name="img" value="<%=season.img%>" /><br />
