--- a/views/show/summerShow.ejs
+++ b/views/show/summerShow.ejs
@@ -4,6 +4,9 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="../showStyle.css">
+
+
 		<title>Summer Bucket List</title>
 	</head>
 	<body>
@@ -22,7 +25,7 @@
 			<li>
 			Description: <%= season[i].description %>
 			</li>
-			Image: <%= season[i].img %>
+			<img class = "showImages" src="<%= season[i].img %>"</br>
 			<li>
 			Price: <%= season[i].price %>
 			</li>
@@ -45,6 +48,7 @@
 
 		<a href="/seasons/new">Add a New Bucket List Item</a>
 
-	
+	</div>
+</div>
 	</body>
 </html>
