--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -5,7 +5,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Book List</title>
+    <link rel="stylesheet" href="editStyle.css">
+    <title>Edit Item</title>
 </head>
 
 <body>
