--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,36 +12,35 @@
 	<body>
         <div class="container">
             <header> <h1>
-                
-            <img id = "bucket-list" src='https://i.imgur.com/dFf9lfn.png'/>
+            FOUR SEASONS BUCKET LIST
             </h1></header>
         <nav id="nav-bar">
-            <a href="/seasons/new">Add a New Bucket List Item</a>
-            <a href="/seasons">Home </a>
+            <a href="/seasons/new">ADD A BUCKET LIST ITEM</br> TO THE SEASON OF YOUR CHOICE</a>
+           
         </nav>
         
         <div id = "content1"> <img id="summer" src="https://images.pexels.com/photos/67566/palm-tree-palm-ocean-summer-67566.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"/>
-        <nav>
-            <a href="/seasons/summer"><img src="https://i.imgur.com/a9HtR1m.png"/></a>
+        <nav class= "seasonLink">
+            <a href="/seasons/summer">SUMMER</a>
         </nav>
         </div>
         <div id = "content2"> 
         <img id ="fall" src="https://images.pexels.com/photos/33109/fall-autumn-red-season.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"/>
-        <nav>
+        <nav class= "seasonLink">
             <a href="/seasons/fall">Fall</a>
         </nav>
         </div>
         <div id = "content3"> 
             <img id="winter" src="https://images.pexels.com/photos/3375674/pexels-photo-3375674.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"/>
-        <nav>
+            <nav class= "seasonLink">
             <a href="/seasons/winter">Winter</a>
         </nav>
           
         </div>
         <div id = "content4"> 
             <img id="spring" src="https://images.pexels.com/photos/4198566/pexels-photo-4198566.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"/>
-        <nav>
-            <a href="/seasons/spring">Spring</a>
+        <nav class= "seasonLink">
+                <a href="/seasons/spring">Spring</a>
         </nav>
         </div>
         <footer> 
