--- a/public/indexStyle.css
+++ b/public/indexStyle.css
@@ -1,27 +1,25 @@
+
 :root {
     --main-radius: 5px;
     --main-padding: 5px;
   }
   
-
-  
   .container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 0.4fr 0.2fr 1.3fr 1.3fr 0.5fr;
+    grid-template-rows: 0.4fr 0.1fr 1.3fr 1.3fr 0.5fr;
     grid-template-areas:
       "header header header header"
       "nav nav nav nav"
       "content1 content1 content2 content2"
       "content3 content3 content4 content4"
       "footer footer footer footer";
-    grid-gap: 0.2rem;
     font-weight: bold;
     text-transform: uppercase;
     font-size: 13px;
     
-    background: url('https://images.pexels.com/photos/218434/pexels-photo-218434.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1') center center fixed;
-    border-image: url ('https://images.pexels.com/photos/129733/pexels-photo-129733.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');   
+    background: url('https://images.pexels.com/photos/218434/pexels-photo-218434.jpeg?auto=compress&cs=tinysrgb&w=1260&h=770&dpr=1') center center fixed;
+    border-image: url ('https://images.pexels.com/photos/129733/pexels-photo-129733.jpeg?auto=compress&cs=tinysrgb&w=1260&h=770&dpr=1');   
     border-radius: 45px;
     border-style: solid;
     border-width: 40px;
@@ -33,20 +31,66 @@
 
     grid-area: header;
     color: white; 
-    font-size: 30px;  
+    background-color: black;
+    font-family: 'Abhaya Libre', serif;
+    font-size: 40px;
+    text-shadow: yellow 2px 0 8px;  
+    text-decoration: underline;
+
   }
   nav {
-   
     grid-area: nav;
+  }
+  .navBarContainer {
+    list-style-type: none;
+    border: 2px solid white;
+  }
+  .nav-bar {
+    font-size: 20px;
+    background-color: black;
+    margin-bottom: 30px;
+    float: left;
 
   }
-  #nav-bar {
-
-    font-size: 45px;
-    padding-bottom: 40px;
+  .navItems {
+    float: left;
   }
-  #bucket-list {
-    width:25%;
+
+  .navLinks {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 15px 15px;
+    text-decoration: none;
+  }
+  .navLinks:hover {
+    background-color:grey;
+
+  }
+  #homeNav {
+    display: inline;
+    text-align: left;
+    
+  }
+  #aboutNav {
+    display: inline;
+  }
+
+  #addItemNav {
+    float: right;
+  }
+
+  #summerNav {
+    float: right;
+  }
+  #fallNav {
+    float: right;
+  }
+  #winterNav {
+    float: right;
+  }
+  #springNav {
+    float: right;
   }
  
   
@@ -58,9 +102,9 @@
   }
   #summer {
    width: 70%;
-   height: 600px;
+   height: 300px;
    object-fit: fill;  
-   border-image: url ('https://images.pexels.com/photos/129733/pexels-photo-129733.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');   
+   border-image: url ('https://images.pexels.com/photos/129733/pexels-photo-129733.jpeg?auto=compress&cs=tinysrgb&w=1260&h=770&dpr=1');   
    border-radius: 0;
    border-style: solid;
    border-width: 25px;
@@ -77,9 +121,9 @@
   }
   #fall {
    width: 70%;
-   height: 600px;
+   height: 300px;
    object-fit: fill; 
-   border-image: url ('https://images.pexels.com/photos/129733/pexels-photo-129733.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
+   border-image: url ('https://images.pexels.com/photos/129733/pexels-photo-129733.jpeg?auto=compress&cs=tinysrgb&w=1260&h=770&dpr=1');
    border-radius: 0;
    border-style: solid;
    border-width: 25px;
@@ -91,9 +135,9 @@
   }
   #winter {
     width: 70%;
-    height: 600px;
+    height: 300px;
     object-fit: fill; 
-    border-image: url ('https://images.pexels.com/photos/129733/pexels-photo-129733.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
+    border-image: url ('https://images.pexels.com/photos/129733/pexels-photo-129733.jpeg?auto=compress&cs=tinysrgb&w=1260&h=770&dpr=1');
     border-radius: 0;
     border-style: solid;
     border-width: 25px;
@@ -106,10 +150,9 @@
   }
   #spring {
     width: 70%;
-    height: 600px;
+    height: 300px;
     object-fit: fill; 
-    border-image: url ('https://images.pexels.com/photos/129733/pexels-photo-129733.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
-    /* border-color: rgb(150, 111, 51) rgb(70, 49, 21); */
+    border-image: url ('https://images.pexels.com/photos/129733/pexels-photo-129733.jpeg?auto=compress&cs=tinysrgb&w=1260&h=770&dpr=1');
     border-radius: 0;
     border-style: solid;
     border-width: 25px; 
@@ -117,14 +160,20 @@
   }
 
   
-  footer {
+  .footer {
     grid-area: footer;
+    position: relative;
+    bottom: 0;
+    width: 100%;
     font-size: 20px;
     color: antiquewhite;
-    position: relative;
-    left: -341px;
-    bottom: -135px;
+    background-color: black;
+    text-shadow: yellow 2px 0 8px;  
+    text-decoration: underline;
+  }
+  
+  .seasonButtons {
+    
   }
   
 
-  
