wip: more home styling

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,31 +28,26 @@
               <li id="winterNav"><a class="navLinks" href="/seasons/new">Winter</a></li>
               <li id="springNav"><a class="navLinks" href="/seasons/spring">Spring</a></li>
             </ul>
-           
         </nav>
         
-        <div id = "content1"> <img id="summer" src="https://images.pexels.com/photos/67566/palm-tree-palm-ocean-summer-67566.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"/>
-        <nav class= "seasonLink">
-            <button class = "seasonButtons"><a href="/seasons/summer">SUMMER</a></button>
-        </nav>
+        <div class = "content1"> 
+            <img id="summerPic" src="https://images.pexels.com/photos/67566/palm-tree-palm-ocean-summer-67566.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+            <button class = "seasonButtons"><a class = "seasonLink" href="/seasons/summer">SUMMER</a></button>
         </div>
-        <div id = "content2"> 
-        <img id ="fall" src="https://images.pexels.com/photos/33109/fall-autumn-red-season.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"/>
-        <nav class= "seasonLink">
-            <button class = "seasonButtons"><a href="/seasons/fall">FALL</a></button>
-        </nav>
+
+        <div class = "content2"> 
+        <img id ="fallPic" src="https://images.pexels.com/photos/33109/fall-autumn-red-season.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+            <button class = "seasonButtons"><a class = "seasonLink" href="/seasons/fall">FALL</a></button>
         </div>
-        <div id = "content3"> 
+        
+
+        <div class= "content3"> 
             <img id="winter" src="https://images.pexels.com/photos/3375674/pexels-photo-3375674.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"/>
-            <nav class= "seasonLink">
-            <button><a href="/seasons/winter">WINTER</a></button>
-        </nav>
-          
+            <button class = "seasonButtons"><a class = "seasonLink" href="/seasons/winter">WINTER</a></button>          
         </div>
-        <div id = "content4"> 
+        <div class = "content4"> 
             <img id="spring" src="https://images.pexels.com/photos/4198566/pexels-photo-4198566.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"/>
-        <nav class= "seasonLink">
-                <button><a href="/seasons/spring">SPRING</a></button>
+        <button class = "seasonButtons"><a class = "seasonLink" href="/seasons/spring">SPRING</a></button>
         </nav>
         </div>
         <footer class="footer"> 
