--- a/public/indexStyle.css
+++ b/public/indexStyle.css
@@ -95,33 +95,58 @@
  
   
   
-  #content1 {
-
+  .content1 {
     grid-area: content1;
+    position: relative;
+    width: 100%;
+    padding: 10px;
+
     
   }
-  #summer {
+  .content1 #summerPic {
    width: 70%;
-   height: 300px;
+   height: 400px;
    object-fit: fill;  
    border-image: url ('https://images.pexels.com/photos/129733/pexels-photo-129733.jpeg?auto=compress&cs=tinysrgb&w=1260&h=770&dpr=1');   
    border-radius: 0;
    border-style: solid;
    border-width: 25px;
 }
+
+  .seasonButtons {
+  position: absolute;
+  background-color: black;
+  border-radius: 20px;
+  padding: 8px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  
+
+}
+
 .seasonLink {
+  color: white;
   font-size: 24px;
   padding-top: 10px;
   padding-bottom: 20px;
+  text-decoration: none;
+}
+.seasonLink:hover {
+  text-shadow: yellow 2px 0 8px;  
+
 }
   
-  #content2 {
+  .content2 {
     grid-area: content2;
+    position: relative;
+    width: 100%;
+    padding: 10px;
  
   }
-  #fall {
+  .content2 #fallPic {
    width: 70%;
-   height: 300px;
+   height: 400px;
    object-fit: fill; 
    border-image: url ('https://images.pexels.com/photos/129733/pexels-photo-129733.jpeg?auto=compress&cs=tinysrgb&w=1260&h=770&dpr=1');
    border-radius: 0;
@@ -129,13 +154,16 @@
    border-width: 25px;
   }
   
-  #content3 {
+  .content3 {
     grid-area: content3;
+    position: relative;
+    width: 100%;
+    padding: 10px;
     
   }
   #winter {
     width: 70%;
-    height: 300px;
+    height: 400px;
     object-fit: fill; 
     border-image: url ('https://images.pexels.com/photos/129733/pexels-photo-129733.jpeg?auto=compress&cs=tinysrgb&w=1260&h=770&dpr=1');
     border-radius: 0;
@@ -144,13 +172,16 @@
   
   
   }
-  #content4 {
+  .content4 {
     grid-area: content4;
+    position: relative;
+    width: 100%;
+    padding: 10px;
 
   }
   #spring {
     width: 70%;
-    height: 300px;
+    height: 400px;
     object-fit: fill; 
     border-image: url ('https://images.pexels.com/photos/129733/pexels-photo-129733.jpeg?auto=compress&cs=tinysrgb&w=1260&h=770&dpr=1');
     border-radius: 0;
@@ -163,17 +194,16 @@
   .footer {
     grid-area: footer;
     position: relative;
-    bottom: 0;
+    bottom: -40px;
+    height: auto;
     width: 100%;
     font-size: 20px;
     color: antiquewhite;
-    background-color: black;
     text-shadow: yellow 2px 0 8px;  
     text-decoration: underline;
+    margin-top: 53px;
+    text-align: center;
   }
   
-  .seasonButtons {
-    
-  }
-  
+
 
