--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,17 +15,17 @@
 	</head>
 	<body>
         <div class="container">
-            <header> <h1>
-            FOUR SEASONS BUCKET LIST
-            </h1></header>
+            <header> 
+            <h1> FOUR SEASONS BUCKET LIST</h1>
+             </header>
         <nav class="nav-bar">
             <ul class ="navBarContainer">
               <li class="navItems"><a class="navLinks" href="#">Home</a></li>
               <li class="navItems"><a class="navLinks" href="#">About</a></li>
               <li class="navItems"><a class="navLinks" href="/seasons/new">Add a Bucket List Item</a></li>
-              <li id="summerNav"><a class="navLinks" href="">Summer</a></li>
-              <li id="fallNav"><a class="navLinks" href="/seasons/new">Fall</a></li>
-              <li id="winterNav"><a class="navLinks" href="/seasons/new">Winter</a></li>
+              <li id="summerNav"><a class="navLinks" href="/seasons/summer">Summer</a></li>
+              <li id="fallNav"><a class="navLinks" href="/seasons/fall">Fall</a></li>
+              <li id="winterNav"><a class="navLinks" href="/seasons/winter">Winter</a></li>
               <li id="springNav"><a class="navLinks" href="/seasons/spring">Spring</a></li>
             </ul>
         </nav>
@@ -39,7 +39,7 @@
         <img id ="fallPic" src="https://images.pexels.com/photos/33109/fall-autumn-red-season.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
             <button class = "seasonButtons"><a class = "seasonLink" href="/seasons/fall">FALL</a></button>
         </div>
-        
+
 
         <div class= "content3"> 
             <img id="winter" src="https://images.pexels.com/photos/3375674/pexels-photo-3375674.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"/>
